<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ide.java</groupId>
    <artifactId>EyeCode</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>26</javafx.version>

        <eyecode.mainClass>com.eyecode.javafx.FxApplication</eyecode.mainClass>

        <eyecode.ui>LEGACY_JAVAFX</eyecode.ui>
        <eyecode.webshell.devUrl></eyecode.webshell.devUrl>
    </properties>

    <repositories>
        <repository>
            <id>intellij-dependencies</id>
            <url>https://cache-redirector.jetbrains.com/intellij-dependencies</url>
        </repository>


        <repository>
            <id>jetbrains-infra</id>
            <url>https://packages.jetbrains.team/maven/p/ij/intellij-dependencies/</url>
        </repository>
    </repositories>


    <dependencies>

        <dependency>
            <groupId>org.cef</groupId>
            <artifactId>jcef</artifactId>
            <version>jbrsdk-21.0.11</version>
            <scope>system</scope>
            <systemPath>C:/Users/JoyBoy/Downloads/springboot/EyeCode/lib/jcef.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.techsenger.ceffx</groupId>
            <artifactId>ceffx-core</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>


        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.4</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>3.4</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>

        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark</artifactId>
            <version>0.64.8</version>
        </dependency>

        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-ext-autolink</artifactId>
            <version>0.64.8</version>
        </dependency>

        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-ext-emoji</artifactId>
            <version>0.64.8</version>
        </dependency>

        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-ext-tables</artifactId>
            <version>0.64.8</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains.pty4j</groupId>
            <artifactId>pty4j</artifactId>
            <version>0.13.12</version>
        </dependency>
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.7</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains.jediterm</groupId>
            <artifactId>jediterm-ui</artifactId>
            <version>3.63</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains.jediterm</groupId>
            <artifactId>jediterm-core</artifactId>
            <version>3.63</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.11.7</version>
        </dependency>

        <dependency>
            <groupId>org.apache.xmlgraphics</groupId>
            <artifactId>batik-transcoder</artifactId>
            <version>1.17</version>
        </dependency>
        <dependency>
            <groupId>org.apache.xmlgraphics</groupId>
            <artifactId>batik-codec</artifactId>
            <version>1.17</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <release>${maven.compiler.target}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>${eyecode.mainClass}</mainClass>

                    <options>
                        <option>-Deyecode.ui=${eyecode.ui}</option>
                        <option>-Deyecode.webshell.devUrl=${eyecode.webshell.devUrl}</option>

                        <option>-Djava.library.path=${project.basedir}/chromium</option>

                        <option>--enable-native-access=javafx.graphics</option>
                        <option>--enable-native-access=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>java.desktop/sun.awt=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>java.desktop/sun.awt=ALL-UNNAMED</option>


                        <option>--add-opens</option>
                        <option>java.desktop/sun.java2d=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>java.desktop/sun.font=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.scene=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>javafx.controls/javafx.scene.control=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.stage=ALL-UNNAMED</option>

                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
